# crytwi-py

./: .gitignore  README.md  pyproject.toml  setup.cfg
debian/: README.Debian  changelog  control  copyright  python-crytwi-doc.manpages  rules
man/: libcrytwi.3  template
man/man3/: libcrytwi.3  libcrytwi.assemble_dynamic_meta_header.3  libcrytwi.assemble_fixed_meta_header.3
src/crytwi/: __init__.py  __main__.py  cli.py
src/libcrytwi/: __init__.py  constants.py  crypto.py  header.py  io_utils.py  misc_utils.py  security.py  structs.py
tests/: test-d.py  test-e.py
