[project]
name = "crytwi-py"
version = "0.0.1-alpha"
authors = [
  { name = "ShXlin Li", email = "lishxlin@outlook.com" }
]
maintainers = [
  { name = "ShXlin Li", email = "lishxlin@outlook.com" }
]
description = "Meta package for Crytwi Python tools (simple CLI, daemon, advanced CLI)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=44.0.0",
]
license = "LGPL-3.0-or-later"
license-files = ["LICENSE*"]
classifiers = [
  "Development Status :: 1 - Planning",
  "Programming Language :: Python :: 3",
  "Operating System :: POSIX",
  "Environment :: Console",
  "Topic :: Security"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/lishxlin/crytwi-py"
Issues = "https://github.com/lishxlin/crytwi-py/issues"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["libcrytwi"]


